--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,57 +2,22 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:id="@+id/drawerlayout"
     tools:openDrawer="end">
 
-   <RelativeLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       >
 
-       <FrameLayout
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           android:id="@+id/FragmentLayout"
-           android:layout_above="@+id/bottomnavigation"
-           android:layout_below="@+id/relative_serch"/>
-
-           <com.google.android.material.bottomnavigation.BottomNavigationView
-               android:layout_width="match_parent"
-               android:layout_height="60dp"
-               android:id="@+id/bottomnavigation"
-               android:layout_alignParentBottom="true"
-               android:background="#c3c3c3"
-               app:itemIconTint="@color/white"
-               app:itemTextColor="@color/white"
-               app:menu="@menu/menu" />
-           <RelativeLayout
-               android:id="@+id/relative_serch"
-               android:layout_width="match_parent"
-               android:layout_height="100dp"
-               android:background="#45D3D2D2"
-               tools:ignore="MissingConstraints">
-
-           <SearchView
-               android:gravity="center_vertical"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"/>
-
-           </RelativeLayout>
-
-   </RelativeLayout>
+    <include layout="@layout/content_main" />
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav"
         android:layout_width="250dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/navigationdrawer_menu"
-        app:headerLayout="@color/black"/>
-
+        app:headerLayout="@color/black"
+        app:menu="@menu/navigationdrawer_menu" />
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
