--- a/app/src/main/res/layout/fragment_tbligh.xml
+++ b/app/src/main/res/layout/fragment_tbligh.xml
@@ -5,15 +5,27 @@
     android:layout_height="match_parent"
     tools:context=".TablighFragment">
 
-  <androidx.recyclerview.widget.RecyclerView
+  <ScrollView
       android:layout_width="match_parent"
-      android:layout_height="80dp"
-      android:id="@+id/recyclerfiilter"
-      android:layout_marginTop="10dp"/>
+      android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:id="@+id/recyclerpishnahad"
-        android:layout_marginTop="100dp"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+
+      <androidx.recyclerview.widget.RecyclerView
+          android:layout_width="match_parent"
+          android:layout_height="80dp"
+          android:id="@+id/recyclerfiilter"
+          android:layout_marginTop="10dp"/>
+
+      <androidx.recyclerview.widget.RecyclerView
+          android:layout_width="match_parent"
+          android:layout_height="200dp"
+          android:id="@+id/recyclerpishnahad"
+          android:layout_marginTop="100dp"/>
+    </LinearLayout>
+  </ScrollView>
 </FrameLayout>
