--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,52 @@
     tools:context=".MainActivity"
     tools:openDrawer="end">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".MainActivity">
+        <FrameLayout
+            android:id="@+id/FragmentLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/bottomnavigation"
+            android:layout_below="@+id/relative_serch" />
 
-    <include layout="@layout/content_main" />
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomnavigation"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            android:background="#c3c3c3"
+            app:itemIconTint="@color/white"
+            app:itemTextColor="@color/white"
+            app:menu="@menu/menu" />
+
+        <RelativeLayout
+            android:id="@+id/relative_serch"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="#45D3D2D2"
+            >
+
+            <SearchView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical" />
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
+<!--    <include layout="@layout/content_main" />-->
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav"
         android:layout_width="250dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:headerLayout="@color/black"
-        app:menu="@menu/navigationdrawer_menu" />
+        app:menu="@menu/navigationdrawer_menu"
+        app:headerLayout="@layout/headerlayout"/>
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
